crates/service/tests/code_action/snapshots/features__code_action__fix_packing__array_get_u.snap
---
source: crates/service/tests/code_action/fix_packing.rs
expression: response
---
[
  {
    "title": "Replace instruction with `array.get`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 5,
            "character": 16
          },
          "end": {
            "line": 5,
            "character": 17
          }
        },
        "code": "packing",
        "message": ""
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 5,
                "character": 4
              },
              "end": {
                "line": 5,
                "character": 15
              }
            },
            "newText": "array.get"
          }
        ]
      }
    }
  }
]
