crates/service/tests/code_action/snapshots/features__code_action__fix_packing__struct_get_s.snap
---
source: crates/service/tests/code_action/fix_packing.rs
expression: response
---
[
  {
    "title": "Replace instruction with `struct.get`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 5,
            "character": 20
          },
          "end": {
            "line": 5,
            "character": 21
          }
        },
        "code": "packing",
        "message": ""
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 5,
                "character": 4
              },
              "end": {
                "line": 5,
                "character": 16
              }
            },
            "newText": "struct.get"
          }
        ]
      }
    }
  }
]
